Add line counting

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
 			"type": "dub",
 			"test": true,
 			"buildType": "debug",
-			"configuration": "tests",
+			"configuration": "unittest",
 			"problemMatcher": [
 				"$dmd"
 			],
