A small correction to dub

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 		{
 			"type": "dub",
 			"test": true,
-			"buildType": "debug",
+			"buildType": "unittest",
 			"configuration": "unittest",
 			"problemMatcher": [
 				"$dmd"
